--- a/application-prod.properties
+++ b/application-prod.properties
@@ -9,3 +9,12 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 server.port=5000
+
+logging.level.org.springframework.security=DEBUG
+
+## App Properties
+app.jwt-secret= JWTSecretKey
+app.jwt-expiration-milliseconds = 604800000
+
+spring.profiles.active=prod
+
